@@ -6275,7 +6275,7 @@ int Rebmix::RunTemplateFile(char *file)
     int   Error = 0;
 
     #if (_REBMIXEXE)
-    printf("REBMIX Version 2.9.3\n");
+    printf("REBMIX Version 2.10.0\n");
     #endif
 
     if ((fp = fopen(file, "r")) == NULL) {
